<resources>
    <string name="app_name">BNFT</string>
    <string name="app_description" translatable="false">Connect with BNFT</string>

    <!--dummy data-->
    <string name="map_key">AIzaSyDpeMGQV5I2tOkgkUL4TQhdyHIbn68pSF0</string>
    <string name="default_notification_channel_id">general_channel_id</string>

    <!--VALIDATION ERROR-->
    <string name="err_empty">Should not be empty.</string>
    <string name="err_email_valid">Invalid email address</string>
    <string name="err_mobile_valid">Mobile number must be between 5-12 numbers.</string>
    <string name="not_valid_mobile">Invalid mobile number</string>
    <string name="sure_delete_notif">Are you sure you want to delete?</string>
    <string name="cancel_order">Do you want to cancel the service?</string>
    <string name="pleaseagree">Please Agree Terms and condition </string>
    <string name="err_special_characters">At least one special characters is needed.</string>
    <string name="err_internet">Please check your internet connection</string>
    <string name="err_pass_match">Retype password and actual password do not match.</string>
    <string name="err_pass_length">Password must be between 8-15 characters</string>
    <string name="err_description_length">Description must be between 10-1000 characters</string>
    <string name="uploadError">Please select Atleast One Image</string>
    <string name="error_password">Password must contain minimum 8 characters at least 1 Alphabet, 1 Number and 1 Special Character</string>
    <string name="alert">Alert</string>
    <string name="welcome">Welcome</string>
    <string name="you_have_successfully_registered_with_bnft">You have successfully registered with BNFT</string>
    <string name="you_have_successfully_login_with_bnft">You have successfully login with BNFT</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="live">Live</string>
    <string name="sold_out">Sold Out</string>





    <string name="connect_to_wallet">Connect to Wallet</string>
    <string name="please_login_to_your_account">Please login to your account.</string>
    <string name="metamask">Metamask</string>
    <string name="walletconnect">WalletConnect</string>
    <string name="skip"><u>Skip</u></string>
    <string name="home">Home</string>
    <string name="aucttions">Auctions</string>
    <string name="my_auctions">My Auctions</string>
    <string name="notifications">Notifications</string>
    <string name="public_notifications">Public Notifications</string>
    <string name="category">Category</string>
    <string name="sort_by">Sort By</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="buy_now">Buy now</string>
    <string name="just">Just</string>
    <string name="dropped">Dropped</string>
    <string name="view_all">View All</string>
    <string name="explore">Explore</string>
    <string name="featured">Featured</string>
    <string name="hoodies">Hoodies</string>
    <string name="popular">Popular</string>
    <string name="collections">Collections</string>
    <string name="view_all_with_des">--- View All ---</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="my_auction">My Auction</string>
    <string name="my_address">My Address</string>
    <string name="favorites">Favorites</string>
    <string name="logout">logout</string>
    <string name="current_price">Current Price</string>
    <string name="about_collections">About Collections</string>
    <string name="dummy_text">Each Surge woman is of two worlds: pixel and pen. Each feature, though hand-sketched, has been layered algorithmically to form a whole. The Surge Passport collection represents our belief that beautiful things have a human touch.</string>
    <string name="nft_image">NFT Image</string>
    <string name="properties">Properties</string>
    <string name="price_history">Price History</string>
    <string name="all_time">All Time</string>
    <string name="bid_history">Bid History</string>
    <string name="details">Details</string>
    <string name="contract_address">Contract Address</string>
    <string name="token_id">Token ID</string>
    <string name="token_standard">Token Standard</string>
    <string name="blockchain">Blockchain</string>
    <string name="creator_fees">Creator Fees</string>
    <string name="more_from_the_collection">More from the collection</string>
    <string name="_0x0632_32b0">0x0632...32b0</string>
    <string name="bid_placed_by">Bid Placed By</string>
    <string name="eth">ETH</string>
    <string name="enter_here">Enter Here...</string>
    <string name="bid_now">Bid Now</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="dial_code">Dial Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save_profile">Save Profile</string>
    <string name="current_location">Current Location</string>
    <string name="use_my_current_location">Use My Current Location</string>
    <string name="edit">Edit</string>
    <string name="building_name">Building Name</string>
    <string name="street_address">Street Address</string>
    <string name="land_mark_optional">land Mark (Optional)</string>
    <string name="set_as_default_address">Set as Default Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="request_for_resale">Request for Resale</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="bill_details">Bill Details</string>
    <string name="sub_total">Sub Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="cancel_order_">Cancel Order</string>
    <string name="order_placed">Order Placed</string>
    <string name="enter_your_message">Enter Your message</string>
    <string name="submit">Submit</string>
    <string name="min_bid">Min. Bid</string>
    <string name="by">By</string>
    <string name="min_bid_amount">Min Bid Amount</string>
    <string name="proceed">Proceed</string>
    <string name="end_date">End Date</string>
    <string name="place_bid">Place Bid</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="picker_select_this">Select this location</string>
</resources>