<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="sideMenuViewModel"
            type="com.mobiria.bnft.ui.dashboard.navigation_menu.SideMenuViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:src="@drawable/ic_bnft_text" />


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_20sdp"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="right"
                        android:onClick="@{sideMenuViewModel.onHomeClick}"
                        android:padding="10sp"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_about_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:padding="10sp"
                        android:onClick="@{sideMenuViewModel.onAboutUsClick}"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/about_us"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_faqs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:padding="10sp"
                        android:onClick="@{sideMenuViewModel.onFaqClick}"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/faqs"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_terms_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:onClick="@{sideMenuViewModel.onTermsConditionClick}"
                        android:padding="10sp"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/terms_amp_condition"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:onClick="@{sideMenuViewModel.onPrivacyPolicyClick}"
                        android:padding="10sp"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_contact_us"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:onClick="@{sideMenuViewModel.onContactusClick}"
                        android:padding="10sp"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/contact_us"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:onClick="@{sideMenuViewModel.onShareClick}"
                        android:padding="10sp"
                        android:gravity="right"
                        android:drawableLeft="@drawable/ic_back"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

    </RelativeLayout>
</layout>