<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/matchMatch"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0sp"
            android:layout_height="46sp"
            android:text="@string/category"
            android:drawableRight="@drawable/ic_arrow_next"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:textColor="@color/app_color"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/hud_cover_radius"
            />

        <TextView
            android:id="@+id/tv_sort_by"
            android:layout_width="0sp"
            android:layout_height="46sp"
            android:text="@string/sort_by"
            android:drawableRight="@drawable/ic_arrow_next"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:textColor="@color/app_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/hud_cover_radius"
            />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0sp"
            android:layout_height="46sp"
            android:text="@string/status"
            android:drawableRight="@drawable/ic_arrow_next"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="@dimen/sp_16"
            android:gravity="center_vertical"
            android:textColor="@color/app_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_sort_by"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/hud_cover_radius"
            />



        <TextView
            android:id="@+id/btn_apply"
            android:layout_width="148sp"
            android:layout_height="40sp"
            android:background="@color/app_color"
            android:text="Apply"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginBottom="@dimen/_65sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>