<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    >
    <data>
        <variable
            name="viewModel"
            type="com.mobiria.bnft.ui.fragment.auctions.my_auction.MyAuctionViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/matchMatch"
        android:background="@color/white"
        android:padding="10sp"
        >
        <HorizontalScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scrollbars="none"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="146sp"
                    android:layout_height="45sp"
                    android:text="@string/pending"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_bold"
                    android:onClick="@{viewModel::onPendingClick}"
                    android:textColor="@{viewModel.isTabs == 1 ? @color/white : @color/app_color}"
                    android:background="@{viewModel.isTabs == 1 ? @color/app_color : @color/tab_un_selected}"
                    />

                <TextView
                    android:layout_width="146sp"
                    android:layout_height="45sp"
                    android:text="@string/live"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:onClick="@{viewModel::onLiveClick}"
                    android:textColor="@{viewModel.isTabs == 2 ? @color/white : @color/app_color}"
                    android:background="@{viewModel.isTabs == 2 ? @color/app_color : @color/tab_un_selected}"
                    />

                <TextView
                    android:layout_width="146sp"
                    android:layout_height="45sp"
                    android:text="@string/sold_out"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:onClick="@{viewModel::onSoldOurClick}"
                    android:textColor="@{viewModel.isTabs == 3 ? @color/white : @color/app_color}"
                    android:background="@{viewModel.isTabs == 3 ? @color/app_color : @color/tab_un_selected}"
                    />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_auctions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/white"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/layout_my_auction_item"
            android:paddingBottom="@dimen/_55sdp"/>

        <include layout="@layout/layout_empty"
            android:id="@+id/empty_layout"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>