<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title_lyt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@android:color/white"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/alert_title_txt_"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/welcome"
                        android:textColor="@color/app_color"
                        android:fontFamily="@font/poppins_medium"
                        android:textAllCaps="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:minHeight="80dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/grade_lyt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/titles"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5sp"
                        android:gravity="center"
                        android:text="@string/you_have_successfully_login_with_bnft"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/_12sdp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="18dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/dismiss_alert_btn"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/rounded_gray"
                            android:ems="6"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_bold"
                            android:gravity="center"
                            android:text="@string/ok"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/stat_img"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:padding="5dp"
            android:src="@drawable/tick_image" />
    </RelativeLayout>

</layout>